// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components - MiniShoppingBag:  Empty - MiniShoppingBag:  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #f7f7f7;
  border-radius: 0.25rem;
  width: 5.375rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: #f7f7f7;
}

.c1.c1 {
  padding: 0.75rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: inherit;
}

.c2 {
  height: 4.313rem;
  background-color: #f7f7f7;
  border-bottom: 0.0625rem solid #eaeaea;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
  border-top: 1px solid #eaeaea;
}

.c4.c4 > a:first-child {
  margin-right: 1rem;
}

<div
    class="c0"
    data-testid="header-mini-shopping-bag"
  >
    <h4
      class="MuiTypography-root c1 MuiTypography-h4"
      data-testid="header-mini-shopping-bag-item-count"
    >
      0 Items In Bag
    </h4>
    <div
      class="c2"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
        data-testid="header-mini-shopping-bag-empty"
      >
        Your shopping bag is empty
      </h5>
    </div>
    <div
      class="c3"
    >
      <p
        class="MuiTypography-root MuiTypography-h5"
      >
        Total
      </p>
      <p
        class="MuiTypography-root MuiTypography-h5"
      >
        £0.00
      </p>
    </div>
    <div
      class="c4"
    >
      <div>
        CTA
      </div>
      <div>
        Checkout
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - MiniShoppingBag:  Empty - MiniShoppingBag:  should match the snapshot with burger template 1`] = `
<DocumentFragment>
  .c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #f7f7f7;
  border-radius: 0.25rem;
  width: 5.375rem;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0.5rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: #f7f7f7;
}

.c1.c1 {
  padding: 0.75rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: inherit;
}

.c2 {
  height: 4.313rem;
  background-color: #f7f7f7;
  border-bottom: 0.0625rem solid #eaeaea;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
  border-top: 1px solid #eaeaea;
}

.c4.c4 > a:first-child {
  margin-right: 1rem;
}

<div
    class="c0"
    data-testid="header-mini-shopping-bag"
  >
    <h4
      class="MuiTypography-root c1 MuiTypography-h4"
      data-testid="header-mini-shopping-bag-item-count"
    >
      0 Items In Bag
    </h4>
    <div
      class="c2"
    >
      <h5
        class="MuiTypography-root MuiTypography-h5"
        data-testid="header-mini-shopping-bag-empty"
      >
        Your shopping bag is empty
      </h5>
    </div>
    <div
      class="c3"
    >
      <p
        class="MuiTypography-root MuiTypography-h5"
      >
        Total
      </p>
      <p
        class="MuiTypography-root MuiTypography-h5"
      >
        £0.00
      </p>
    </div>
    <div
      class="c4"
    >
      <div>
        CTA
      </div>
      <div>
        Checkout
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - MiniShoppingBag:  Not Empty - MiniShoppingBag:  should match the snapshot  1`] = `
<DocumentFragment>
  .c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #f7f7f7;
  border-radius: 0.25rem;
  width: 5.375rem;
}

.c1.c1 {
  padding: 0.75rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: inherit;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
  border-top: 1px solid #eaeaea;
}

.c3.c3 > a:first-child {
  margin-right: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
    class="c0"
    data-testid="header-mini-shopping-bag"
  >
    <h4
      class="MuiTypography-root c1 MuiTypography-h4"
      data-testid="header-mini-shopping-bag-item-count"
    >
      1 Item In Bag
    </h4>
    <div
      class="c2"
      data-testid="header-mini-shopping-bag-list"
    >
      <div>
        Mini Shopping bag items
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        CTA
      </div>
      <div>
        Checkout
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Components - MiniShoppingBag:  Not Empty - MiniShoppingBag:  should match the snapshot when itemlist has Out Of Stock item 1`] = `
<DocumentFragment>
  .c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #f7f7f7;
  border-radius: 0.25rem;
  width: 5.375rem;
}

.c1.c1 {
  padding: 0.75rem 1rem;
  border-bottom: .0625rem solid #9e9e9e;
  background-color: inherit;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
  border-top: 1px solid #eaeaea;
}

.c3.c3 > a:first-child {
  margin-right: 1rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
    class="c0"
    data-testid="header-mini-shopping-bag"
  >
    <h4
      class="MuiTypography-root c1 MuiTypography-h4"
      data-testid="header-mini-shopping-bag-item-count"
    >
      0 Items In Bag
    </h4>
    <div
      class="c2"
      data-testid="header-mini-shopping-bag-list"
    >
      <div>
        Mini Shopping bag items
      </div>
    </div>
    <div
      class="c3"
    >
      <div>
        CTA
      </div>
      <div>
        Checkout
      </div>
    </div>
  </div>
</DocumentFragment>
`;
